[package]
name = "quill"
version = "0.1.0"
authors = ["Jacob Emil Ulvedal Rosborg <jacob@rosborg.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quill_macros = { path = "macros" }
quill_meta = { path = "meta" }

[workspace]
members = [
    "macros",
    "meta",
    "cli",
    "examples/simple"
]
