[package]
name = "quill_macros"
version = "0.1.0"
authors = ["Jacob Emil Ulvedal Rosborg <jacob@rosborg.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = { version = "1.0" }

toml = "0.5"

quill_meta = { path = "../meta" }

[lib]
proc-macro = true